; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_io.c_vlclua_io_open.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_io.c_vlclua_io_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [39 x i8] c"Usage: vlc.io.open(file_path [, mode])\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"io_file\00", align 1
@vlclua_io_file_reg = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [8 x i8] c"__index\00", align 1
@vlclua_io_file_close = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [5 x i8] c"__gc\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_io_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_io_open(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  store i32* %0, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @lua_gettop(i32* %8)
  %10 = icmp slt i32 %9, 1
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @luaL_error(i32* %12, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  store i32 %13, i32* %2, align 4
  br label %49

14:                                               ; preds = %1
  %15 = load i32*, i32** %3, align 8
  %16 = call i8* @luaL_checkstring(i32* %15, i32 1)
  store i8* %16, i8** %4, align 8
  %17 = load i32*, i32** %3, align 8
  %18 = call i8* @luaL_optstring(i32* %17, i32 2, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i8* %18, i8** %5, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = load i8*, i8** %5, align 8
  %21 = call i32* @vlc_fopen(i8* %19, i8* %20)
  store i32* %21, i32** %6, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %25

24:                                               ; preds = %14
  store i32 0, i32* %2, align 4
  br label %49

25:                                               ; preds = %14
  %26 = load i32*, i32** %3, align 8
  %27 = call i32** @lua_newuserdata(i32* %26, i32 8)
  store i32** %27, i32*** %7, align 8
  %28 = load i32*, i32** %6, align 8
  %29 = load i32**, i32*** %7, align 8
  store i32* %28, i32** %29, align 8
  %30 = load i32*, i32** %3, align 8
  %31 = call i64 @luaL_newmetatable(i32* %30, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %46

33:                                               ; preds = %25
  %34 = load i32*, i32** %3, align 8
  %35 = call i32 @lua_newtable(i32* %34)
  %36 = load i32*, i32** %3, align 8
  %37 = load i32, i32* @vlclua_io_file_reg, align 4
  %38 = call i32 @luaL_register(i32* %36, i32* null, i32 %37)
  %39 = load i32*, i32** %3, align 8
  %40 = call i32 @lua_setfield(i32* %39, i32 -2, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0))
  %41 = load i32*, i32** %3, align 8
  %42 = load i32, i32* @vlclua_io_file_close, align 4
  %43 = call i32 @lua_pushcfunction(i32* %41, i32 %42)
  %44 = load i32*, i32** %3, align 8
  %45 = call i32 @lua_setfield(i32* %44, i32 -2, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0))
  br label %46

46:                                               ; preds = %33, %25
  %47 = load i32*, i32** %3, align 8
  %48 = call i32 @lua_setmetatable(i32* %47, i32 -2)
  store i32 1, i32* %2, align 4
  br label %49

49:                                               ; preds = %46, %24, %11
  %50 = load i32, i32* %2, align 4
  ret i32 %50
}

declare dso_local i32 @lua_gettop(i32*) #1

declare dso_local i32 @luaL_error(i32*, i8*) #1

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local i8* @luaL_optstring(i32*, i32, i8*) #1

declare dso_local i32* @vlc_fopen(i8*, i8*) #1

declare dso_local i32** @lua_newuserdata(i32*, i32) #1

declare dso_local i64 @luaL_newmetatable(i32*, i8*) #1

declare dso_local i32 @lua_newtable(i32*) #1

declare dso_local i32 @luaL_register(i32*, i32*, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1

declare dso_local i32 @lua_pushcfunction(i32*, i32) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
